--- a/scss/app.scss
+++ b/scss/app.scss
@@ -5,12 +5,163 @@
     font-family: 'EB Garamond', serif; 
 }
 
-nav{
-    padding: 200px;
-    img{
-        width: 125px;
-        height: 125px;
-        margin-left: 30px;
-        
+.header__contenedor{
+    height: 300px;
+    background-color: #a7c957;
+    .header__contenedor-logo{
+        height: 300px;
+        .logo{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 300px;
+                img{
+                    width: 350px;
+                    height: 350px;
+                }
+        }
+    }
+}
+
+.contenedor_tarjeta1{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    max-width: 1100px;
+        .tarjeta__uno{
+            width: 60%;
+            margin: 30px;
+            border-radius: 6px;
+            overflow: hidden;
+            background: #f2e8cf;
+            box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+            cursor: default;
+            transition: all 400ms ease;
+            &:hover{
+                box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+                transform: translateY(-3%);
+            }
+            .tarjeta__uno-imagen{
+                img{
+                    width: 100%;
+                    height: 250px;
+                    border-top: 4px solid #bc4749;
+                }
+            }
+            .tarjeta__uno-contenido{
+                padding: 15px;
+                text-align: center;
+                h3{
+                    color: #000000;
+                    margin-top: 10px;
+                    margin-bottom: 15px;
+                    text-transform: uppercase;
+                    font-weight: bold;
+                }
+                p{
+                    font-size: 20px;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    line-height: 1.5;
+                    color: #000000;
+                }
+                a{
+                    text-decoration: none;
+                    display: inline-block;
+                    text-transform: uppercase;
+                    padding: 10px;
+                    margin-top: 10px;
+                    color: red;
+                    font-weight: bold;
+                    border: 1px solid #000000;
+                    border-radius: 4px;
+                    transition: all 400ms ease;
+                    &:hover{
+                        background: #f9c74f;
+                        color: #000000;
+                    }
+                }
+            }
+        }
+}
+.contenedor_tarjeta2{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    max-width: 1100px;
+        .tarjeta__dos{
+            width: 60%;
+            margin: 30px;
+            border-radius: 6px;
+            overflow: hidden;
+            background: #f2e8cf;
+            box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+            cursor: default;
+            transition: all 400ms ease;
+            &:hover{
+                box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+                transform: translateY(-3%);
+            }
+            .tarjeta__dos-imagen{
+                img{
+                    width: 100%;
+                    height: 250px;
+                    border-top: 4px solid #bc4749;
+                }
+            }
+            .tarjeta__dos-contenido{
+                padding: 15px;
+                text-align: center;
+                h3{
+                    color: #000000;
+                    margin-top: 10px;
+                    margin-bottom: 15px;
+                    text-transform: uppercase;
+                    font-weight: bold;
+                }
+                p{
+                    font-size: 20px;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    line-height: 1.5;
+                    color: #000000;
+                }
+                a{
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    display: inline-block;
+                    padding: 10px;
+                    margin-top: 10px;
+                    color: red;
+                    font-weight: bold;
+                    border: 1px solid #000000;
+                    border-radius: 4px;
+                    transition: all 400ms ease;
+                    &:hover{
+                        background: #f9c74f;
+                        color: #000000;
+                    }
+                }
+            }
+        }
+}
+.footer__contenedor{
+    background-color: #386641;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    .footer__contenedor-contenido{
+        .contenido{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            p{
+                color: #ffffff;
+                margin: 0px;
+
+            }
+        }
     }
 }
