--- a/css/main.css
+++ b/css/main.css
@@ -159,3 +159,7 @@
   display: flex;
   flex-direction: column;
   align-items: center; }
+  .confirmacion__lista h2 {
+    margin-top: 15px; }
+  .confirmacion__lista .tabla tr th {
+    padding: 10px; }
