--- a/scss/app.scss
+++ b/scss/app.scss
@@ -199,4 +199,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+        h2{
+            margin-top: 15px;
+        }
+        .tabla{
+                tr{
+                    th{
+                        padding: 10px;
+                    }
+                }
+        }
+ }
+
