--- a/scss/app.scss
+++ b/scss/app.scss
@@ -206,8 +206,18 @@
                 tr{
                     th{
                         padding: 40px;
+
                     }
                 }
         }
  }
 
+#section{
+    width:320px;
+    height:260px;
+    border-radius:10px;
+    box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
+    display:flex;
+    justify-content:center;
+    border:1px solid #bcbcbc
+}
