--- a/scss/app.scss
+++ b/scss/app.scss
@@ -219,5 +219,5 @@
     box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
     display:flex;
     justify-content:center;
-    border:1px solid #bcbcbc
+    border:1px solid #bcbcbc;
 }
