--- a/scss/app.scss
+++ b/scss/app.scss
@@ -203,21 +203,83 @@
             margin-top: 20px;
         }
         .tabla{
+            margin-bottom: 20px;
                 tr{
                     th{
-                        padding: 40px;
-
+                        padding: 25px;
+                        border: 1px solid #bcbcbc;
                     }
                 }
-        }
- }
+                #cuerpo{
+                    border: 1px solid #bcbcbc;
+                    justify-content:center; 
+                        }
+                    }
+                }
 
-#section{
-    width:320px;
-    height:260px;
-    border-radius:10px;
-    box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
-    display:flex;
-    justify-content:center;
-    border:1px solid #bcbcbc;
+            
+ #section{
+    display:flex;  
+    justify-content:center;       
+              
+                .oficial{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 20px;
+                    margin-right: 10px;
+                    width:250px;
+                    height:200px;
+                    border-radius: 10px;
+                    box-shadow: 2px 4px 4px rgba(0,0,0,0.3);
+                    border:1px solid #bcbcbc;
+                }
+                .solidario{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 20px;
+                    margin-right: 10px;
+                    width:250px;
+                    height:200px;
+                    border-radius: 10px;
+                    box-shadow: 2px 4px 4px rgba(0,0,0,0.3);
+                    border:1px solid #bcbcbc;
+                }
+                .mep{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 20px;
+                    margin-right: 10px;
+                    width:250px;
+                    height:200px;
+                    border-radius: 10px;
+                    box-shadow: 2px 4px 4px rgba(0,0,0,0.3);
+                    border:1px solid #bcbcbc;
+                }
+                .ccl{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 20px;
+                    margin-right: 10px;
+                    width:250px;
+                    height:200px;
+                    border-radius: 10px;
+                    box-shadow: 2px 4px 4px rgba(0,0,0,0.3);
+                    border:1px solid #bcbcbc;
+                }
+                .blue{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 20px;
+                    margin-right: 10px;
+                    width:250px;
+                    height:200px;
+                    border-radius: 10px;
+                    box-shadow: 2px 4px 4px rgba(0,0,0,0.3);
+                    border:1px solid #bcbcbc;
+                }
 }
